--- a/MenuManagementMVC/Web.config
+++ b/MenuManagementMVC/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="RecipeContext" connectionString="Data Source=BOSS-PC\SQLEXPRESS;Initial Catalog=DefaultConnection;User Id=sa;password=sa1;"
+    <add name="RecipeContext" connectionString="Data Source=BOSS-PC\SQLEXPRESS;Initial Catalog=MenuMgtMVC;User Id=sa;password=sa1;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
