done from office by gagan

--- a/MenuManagementMVC/Web.config
+++ b/MenuManagementMVC/Web.config
@@ -17,6 +17,11 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="smtpServer" value="smtp.gmail.com" />
+    <add key="mailAccount" value="nhhcsupport@gmail.com" />
+    <add key="mailPassword" value="pdsupportbeni" />
+    <add key="mailPort" value="587" />
+    <add key="enableSSL" value="true" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
