--- a/MenuManagementMVC/MenuManagementMVC.csproj
+++ b/MenuManagementMVC/MenuManagementMVC.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\UserDefined\IngredientController.cs" />
     <Compile Include="Controllers\UserDefined\RecipeController.cs" />
+    <Compile Include="Controllers\UserDefined\UnitController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -240,6 +241,9 @@
     <Content Include="Views\Recipe\Edit.cshtml" />
     <Content Include="Views\Ingredient\Index.cshtml" />
     <Content Include="Views\Ingredient\Create.cshtml" />
+    <Content Include="Views\Unit\Index.cshtml" />
+    <Content Include="Views\Unit\Create.cshtml" />
+    <Content Include="Views\Shared\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
